# Radiosity

./: README.md
Pathtracer/: CMakeLists.txt  camera.cpp  camera.h  constants.h  file_utils.cpp  file_utils.h  main.cpp  radiance.cpp  radiance.h  ray.cpp  ray.h  sampler.h  scene.cpp  scene.h
Pathtracer/resources/: materials.txt  settings.txt
Radiosity/: .gitignore  CMakeLists.txt  Makefile  bvh.cpp  bvh.h  bvh_BACKUP_6994.cpp  bvh_BASE_6994.cpp  camera.cpp  constants  main.cpp  radiosity.cpp  radiosity.h  shader.cpp  shader.h  shared.h  tiny_obj_loader.h  utils.cpp  utils.h
Radiosity/GLSL/: pass_3d.vert  white.frag
Radiosity/data/: bunny25mil.stats  corbell500mil.stats  dragon100mil.stats
Radiosity/images/: hd_2_64_time
Radiosity/includes/: bvh.h  camera.h  constants  radiosity.h  shader.h  shared.h  stats.h  utils.h
Radiosity/models/: cornell_and_teapot.mtl  cornell_box.mtl  cornell_simple.mtl  cornell_tess3.5.mtl  cornell_tess3_teapot.mtl  cornell_tess4.5.mtl  cornell_tess4.mtl  pot_box.mtl
Radiosity/src/: bvh.cpp  camera.cpp  main.cpp  radiosity.cpp  shader.cpp  stats.cpp  utils.cpp
